<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.eclipsetrader</groupId>
    <artifactId>eclipsetrader-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <tycho.version>4.0.8</tycho.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <!--  <eclipse-repo.url>https://archive.eclipse.org/releases/juno/</eclipse-repo.url>-->
        <eclipse-repo.url>https://download.eclipse.org/releases/2024-03</eclipse-repo.url>
        <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
    </properties>

    <modules>
        <module>org.apache.commons.logging</module>
        <module>org.apache.commons.codec</module>
        <module>org.apache.commons.httpclient</module>
        <module>org.apache.commons</module>
        <module>org.apache.commons-feature</module>
        <module>com.sun.syndication</module>
        <module>com.sun.syndication-feature</module>
        <module>com.sun.syndication.fetcher</module>
        <module>com.tictactec.ta.lib</module>
        <module>com.tictactec.ta.lib-feature</module>
        <module>javax.xml.bind</module>
        <module>org.apache.commons.collections</module>
        <module>org.apache.log4j</module>
        <module>org.apache.log4j-feature</module>
        <!-- <module>org.eclipse.nebula.cwt</module> -->
        <!-- <module>org.eclipse.nebula.jface.cdatetime</module> -->
        <!-- <module>org.eclipse.nebula.widgets.cdatetime</module> -->
        <!-- <module>org.eclipse.nebula.widgets.pshelf</module> -->
        <module>org.eclipsetrader.archipelago</module>
        <module>org.eclipsetrader.borsaitalia</module>
        <module>org.eclipsetrader.brokers.paper</module>
        <module>org.eclipsetrader.brokers.paper-feature</module>
        <module>org.eclipsetrader.core</module>
        <module>org.eclipsetrader.core.tests</module>
        <module>org.eclipsetrader.tests</module>
        <module>org.eclipsetrader.directa</module>
        <module>org.eclipsetrader.directa-feature</module>
        <module>org.eclipsetrader.directaworld</module>
        <module>org.eclipsetrader.directaworld-feature</module>
        <module>org.eclipsetrader.jessx</module>
        <module>org.eclipsetrader.jessx-feature</module>
        <module>org.eclipsetrader.news</module>
        <module>org.eclipsetrader.platform</module>
        <module>org.eclipsetrader.platform-feature</module>
        <module>org.eclipsetrader.platform.doc.isv</module>
        <module>org.eclipsetrader.platform.doc.user</module>
        <module>org.eclipsetrader.releng</module>
        <module>org.eclipsetrader.repository.hibernate</module>
        <module>org.eclipsetrader.repository.hibernate-feature</module>
        <module>org.eclipsetrader.repository.hibernate.derby</module>
        <module>org.eclipsetrader.repository.hibernate.derby-feature</module>
        <module>org.eclipsetrader.repository.hibernate.postgresql</module>
        <module>org.eclipsetrader.repository.hibernate.postgresql-feature</module>
        <module>org.eclipsetrader.repository.local</module>
        <module>org.eclipsetrader.ui</module>
        <module>org.eclipsetrader.ui.application</module>
        <module>org.eclipsetrader.ui.charts.indicators</module>
        <module>org.eclipsetrader.yahoo</module>
        <module>org.eclipsetrader.yahoo-feature</module>
        <module>org.hibernate</module>
        <module>org.hibernate-feature</module>
        <module>org.jdom</module>
        <module>org.htmlparser</module>
        <module>org.htmlparser-feature</module>
        <module>org.jdom-feature</module>
        <module>org.mozilla.rhino</module>
        <module>org.mozilla.rhino-feature</module>
    </modules>

    <repositories>
     <repository>
        <id>central</id>
        <url>https://repo.maven.apache.org/maven2</url>
    </repository>
        <repository>
            <id>eclipse-juno</id>
            <url>${eclipse-repo.url}</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>nebula</id>
            <url>https://download.eclipse.org/nebula/updates/release/latest/</url>
            <layout>p2</layout>
        </repository>
        
        <!-- 
			
         <repository>
            <id>nexus</id>
            <url>http://nexus.emergya.es/nexus/content/repositories/public/</url>
        </repository>
		-->
        
    </repositories>

    <build>
	    <directory>${project.basedir}/target</directory>
        <plugins>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho.version}</version>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-surefire-plugin</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <testSuite>org.eclipsetrader.jessx</testSuite>
                    <testClass>org.eclipsetrader.jessx.internal.core.BrokerLauncherTest</testClass>
                    <useUIHarness>true</useUIHarness>
                    <useUIThread>true</useUIThread>
                    <argLine>-Xmx512m</argLine>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-packaging-plugin</artifactId>
                    <version>${tycho.version}</version>
                    <configuration>
                        <qualifier>${maven.build.timestamp}</qualifier>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-compiler-plugin</artifactId>
                    <version>${tycho.version}</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.eclipse.tycho</groupId>
                                        <artifactId>tycho-packaging-plugin</artifactId>
                                        <versionRange>[${tycho.version},)</versionRange>
                                        <goals>
                                            <goal>build-qualifier</goal>
                                            <goal>package-plugin</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore/>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
